[gd_scene format=3 uid="uid://bsoo75364oajp"]

[ext_resource type="Script" uid="uid://ceymqkybu3oh3" path="res://ui/confirm_quit_dialog.gd" id="1_qhr1f"]

[node name="ConfirmQuitDialog" type="Window"]
oversampling_override = 1.0
title = "Please Confirm..."
initial_position = 1
size = Vector2i(336, 171)
wrap_controls = true
transient = true
exclusive = true
popup_window = true
script = ExtResource("1_qhr1f")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 120)
layout_mode = 2
text = "You have unsaved changes.

Really Quit?"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DiscardAndQuit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Don't Save"

[node name="Cancel" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="SaveAndQuit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save & Quit"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DiscardAndQuit" to="." method="_on_discard_and_quit_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SaveAndQuit" to="." method="_on_save_and_quit_pressed"]
